# mardown-windows

./: LICENSE  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: fs_ops.rs  main.rs
src/app/: global.css  provider.tsx
src/app/routes/: home.tsx
src/features/held/: store.ts
src/features/reader/: DiffView.tsx  MergeView.tsx  Tabs.tsx  diff.ts  store.ts
src/features/settings/: store.ts
src/features/sidebar/: FilesPanel.tsx  HeldPanel.tsx  OutlinePanel.tsx  SearchPanel.tsx  Sidebar.tsx  api.ts  store.ts
src/lib/: persist.ts
